...
    "profile": [
      "profileTranslate",
      "profileAdd",
      "profileEdit",
      "profileShare"
    ],
    "allergies": [
      "allergiesTranslate",
      "allergiesAdd",
      "allergiesEdit",
      "allergiesShare"
    ],
    "medicine": [
      "medicineTanslate",
      "medicineAdd",
      "medicineEdit",
      "medicineShare"
    ],
    "diagnoses": [
      "diagnosesTranslate",
      "diagnosesAdd",
      "diagnosesEdit",
      "diagnosesShare"
    ],
    "vaccines": [
      "vaccinesTranslate",
      "vaccinesAdd",
      "vaccinesEdit",
...
    "documents"
  ];
  PersonalInfo testInfo = PersonalInfo(
      id: 01,
      firstName: "Paulos",
      lastName: "Dessie",
      DOB: "04 Nov 2099",
      organDonor: "Yes",
      gender: "Male",
      SSN: "1111111",
      nationality: "Norwegian",
      Tlf_nr: "426782454",
      postNtr: "Alvovlien",
      land: "Norway",
      streetAddress: "579, Godvik",
      TOI: "String",
...
            color: Colors.black,
            iconSize: 24,
          )
        ],
      ),
      body: Container(
        key: const Key("ScrollMain"),
        color: Colors.blueGrey[50],
        child: ListView.builder(
          itemCount: 7,
          itemBuilder: (BuildContext context, int index) {
            if (index == 0) {
              return getProfile();
...
      padding: const EdgeInsets.all(8.0),
      child: Card(
        elevation: 1,
        child: Padding(
          padding: const EdgeInsets.symmetric(vertical: 4.0),
          child: ExpandablePanel(
            key: Key("PersonalInfo"),
            header: ListTile(
              title: Text(testInfo.firstName! + testInfo.lastName!),
              subtitle: Text("Member since 2022"),
              leading: CircleAvatar(
                radius: 35,
                backgroundColor: Colors.grey[200],
...
                  Padding(
                    padding: const EdgeInsets.all(8.0),
                    child: Container(
                      width: 100,
                      height: 40,
                      child: InkWell(
                        key: Key("EditPersonal"),
                        onTap: () async {
                          var newInfo = await Navigator.of(context).push(
                            MaterialPageRoute(
                              builder: (context) => EditPersonalInfo(testInfo),
                            ),
                          );
...
          padding: const EdgeInsets.all(8.0),
          child: Container(
            child: Column(
                mainAxisAlignment: MainAxisAlignment.start,
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  basicText("Nationality"),
                  Text(testInfo.nationality)
                ]),
          ),
        ),
        Padding(
          padding: const EdgeInsets.all(8.0),
...
