...
                                  const BorderRadius.all(Radius.circular(30)),
                              color: Colors.blue),
                          // color: Colors.blue,
                        )
                        )
                    : GestureDetector(
                        key: const Key("skip"),
                        onTap: () {
                          Navigator.push(context,
                              MaterialPageRoute(builder: (context) {
                            return Hello();
                          }));
                        },
                        child: const Text(
                          // key: ValueKey("skip"),
                          'Skip Tour',
                          style: TextStyle(fontSize: 12),
                        ),
                      ),
                alignment: Alignment(0, 0.8),
              ),
            )
...
