...
              FloatingActionButtonLocation.miniCenterDocked,
          floatingActionButton: Container(
              width: MediaQuery.of(context).size.width,
              color: Colors.white,
              child: BlocConsumer<PersonalInfoBloc, PersonalInfoState>(
                builder: (context, state) {
                  String adaptiveText = "Save";
                  return Padding(
                    // alignment: Alignment.bottomCenter,
                    padding: const EdgeInsets.symmetric(vertical: 6.0),
                    child: FloatingActionButton.extended(
                      onPressed: () {
                        // ignore: unrelated_type_equality_checks
...
